feat[api]: `Update` article (#52)
* transactionImpl add `Update` api

* feat[api]: `Update` article

* update api doc
